--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@ h1  {
 /* //GAMEBOT STYLING  */
 
 .green  {
-    height: 180px;
+    margin-top:7px;
+    height: 170px;
     border-style:solid;
     border-color:rgba(50, 243, 11);
     border-width: 8px;
@@ -67,7 +68,8 @@ h1  {
 }
 
 .red  {
-    height: 180px;
+    margin-top:7px;
+    height: 170px;
     border-style:solid;
     border-color:rgb(226, 35, 67);
     border-width: 8px;
@@ -77,7 +79,8 @@ h1  {
 }
 
 .grey  {
-    height: 180px;
+    margin-top:7px;
+    height: 170px;
     border-style:solid;
     border-color:rgb(78, 76, 77);
     border-width: 8px;
@@ -86,6 +89,9 @@ h1  {
     margin-right:15px;   
 }
 
+.win  {
+    clear: both;
+}
 
 /* //BOT LIFE HIT POINT POSITIONING AND STYLE  */
 
@@ -96,7 +102,7 @@ h1  {
     color: black;
     position: absolute;
     bottom: 8px;
-    left: 110px;
+    left: 107px;
 }
 
 .lifetext  {
@@ -106,13 +112,17 @@ h1  {
     color: black;
     position: absolute;
     bottom: 8px;
-    left: 60px;
+    left: 56px;
+}
+
+.float  {
+    float: left;
 }
 
 .bot  {
     width:185px;
-    float:left;
-    margin-right:10px;
+    /* float:left; */
+    margin-right:16px;
     position: relative;
     text-align: center;
     color: white;
@@ -120,8 +130,8 @@ h1  {
 
 .bot2  {
     width:185px;
-    float:left;
-    margin-right:10px;
+    /* float:left; */
+    margin-right:16px;
     position: relative;
     text-align: center;
     color: white;
@@ -129,8 +139,8 @@ h1  {
 
 .bot3  {
     width:185px;
-    float:left;
-    margin-right:10px;
+    /* float:left; */
+    margin-right:16px;
     position: relative;
     text-align: center;
     color: white;
@@ -138,8 +148,8 @@ h1  {
 
 .bot4  {
     width:185px;
-    float:left;
-    margin-right:10px;
+    /* float:left; */
+    margin-right:16px;
     position: relative;
     text-align: center;
     color: white;
